# ros2

./: Dockerfile-run-linux  flgpu_connect  local_bird  qgcs
install/: local_setup.sh  setup.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: robot_news_station  smartphone
install/my_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: my_cpp_pkg
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh  package.xml
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
log/: latest_build
ros2_ws/docker/: ros2_foxy
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/my_cpp_pkg/lib/my_cpp_pkg/: cpp_node
ros2_ws/install/numb_cpp/lib/numb_cpp/: number_counter
ros2_ws/install/numb_cpp/share/numb_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/numb_py/lib/numb_py/: number_publisher
ros2_ws/install/numb_py/share/numb_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/my_cpp_pkg/src/: robot_news_station.cpp  smartphone.cpp
ros2_ws/src/my_py_pkg/: setup.py
ros2_ws/src/my_py_pkg/my_py_pkg/: add_two_ints_client_no_oop.py  smartphone.py
ros2_ws/src/numb_cpp/: CMakeLists.txt
ros2_ws/src/numb_cpp/src/: number_counter.cpp
ros2_ws/src/numb_py/: package.xml  setup.cfg  setup.py
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: my_first_node.cpp  node_template.cpp
src/my_py_pkg/: package.xml
src/my_py_pkg/my_py_pkg/: my_first_node.py
